--- a/work/eslmasters/index.html
+++ b/work/eslmasters/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Betmaster</title>
+    <title>Esl Masters</title>
     <link rel="stylesheet" href="http://gobo.tv//css/fa/css/font-awesome.min.css">
     <link rel="shortcut icon" href="http://gobo.tv/images/favicon.ico">
     <link rel="stylesheet" href="http://gobo.tv/css/style.css">
@@ -57,23 +57,25 @@ ga('send', 'pageview');
 
  <div class="col-12 cabecera">
     <a href="work/"><i class="fa fa-chevron-left fa-lg" aria-hidden="true"></i></a><br/> 
-    <h2><span class="borde">Betmaster</span></h2>
-    Betmaster
+    <h2><span class="borde">Esl Masters</span></h2>
+    Cabal Estudio
 </div>
 
 <div class="row">
     <div class="col-12">
         <nav class="tags nav justify-content-center flex-column flex-sm-row text-center"><a class="label" href="http://gobo.tv/tags/cgi">cgi</a></nav>
 
-        <p>Diseño, modelado, animación render. Edición.</p>
-<span class="imgWork"><img class="d-block img-fluid" src="imgPrj/betmaster/SetWidth900-10.jpg" style="width:100%" /></span>
-            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/betmaster/SetWidth900-14.jpg" style="width:100%" /></span>
-            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/betmaster/SetWidth900-15.jpg" style="width:100%" /></span>
-            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/betmaster/SetWidth900-4.jpg" style="width:100%" /></span>
-            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/betmaster/SetWidth900-7.jpg" style="width:100%" /></span>
+        <p>Animación 3D.</p>
+<span class="imgWork"><img class="d-block img-fluid" src="imgPrj/eslmasters/2018-04-26%20%282%29.jpg" style="width:100%" /></span>
+            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/eslmasters/2018-04-26%20%283%29.jpg" style="width:100%" /></span>
+            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/eslmasters/2018-04-26%20%284%29.jpg" style="width:100%" /></span>
+            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/eslmasters/2018-04-26%20%285%29.jpg" style="width:100%" /></span>
+            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/eslmasters/2018-04-26%20%286%29.jpg" style="width:100%" /></span>
+            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/eslmasters/2018-04-26%20%287%29.jpg" style="width:100%" /></span>
+            <br/><span class="imgWork"><img class="d-block img-fluid" src="imgPrj/eslmasters/2018-04-26.jpg" style="width:100%" /></span>
             <br/></div><div class="col-12 text-right iconos-social">
   
-  <a href="https://twitter.com/intent/tweet?text=Betmaster&url=http%3a%2f%2fgobo.tv%2fwork%2fbetmaster%2f&via=gobotw&related=gobotw" 
+  <a href="https://twitter.com/intent/tweet?text=Esl%20Masters&url=http%3a%2f%2fgobo.tv%2fwork%2feslmasters%2f&via=gobotw&related=gobotw" 
   rel="nofollow" 
   target="_blank" 
   title="Comparte en Twitter"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a> 
